# handshape_datasets

./: .gitignore  README.md  TODO  folders.txt  images1.xlsx  log.txt  lsa16.py  pyproject.toml  requeriments.txt  requirements-simple.txt  requirements.txt  requirements_old.txt  setup.py  upload.sh
__data__/indian/rgb/: links.txt
__data__/psl/personA/: links.txt
__data__/psl/personB/: links.txt
__data__/psl/personC/: links.txt
doc/: images.xlsx  keras_example.py
examples/: aslA.py  ciarp.py  download_all.py  download_and_delete.py  jsl.py  load_all.py  load_single.py
handshape/datasets_helpers/: TODO  __utils__.py  aslA.py  aslB.py  ciarp.py  irish.py  jsl.py  nus_1.py  nus_2.py  psl.py  pugeault.py
handshape_datasets/: __init__.py  _config.py  _dataset_info.py  base.py  cannonicTable.py  config.py  dataset_info.py  dataset_loader.py
handshape_datasets/__data__/indian/depth/: links.txt
handshape_datasets/datasets/: ciarp.py  common.py  dataset.py  indian_training.py  irish.py  irish_refactory.py  jsl.py  lsa16.py  nus1.py  nus2.py  psl.py  pugeault.py  pugeaultASL.py  rwth.py  utils.py
handshape_datasets/datasets_helpers/: TODO  __utils__.py  _utils.py  aslA.py  aslB.py  ciarp.py  config.py  dataset.py  dataset_loader.py  indian_training.py  irish.py  irish_refactory.py  jsl.py  lsa16.py  nus1.py  nus2.py  nus_1.py  nus_2.py  psl.py  pugeault.py  pugeaultASL.py  rwth-phoenix.py  rwth.py  utils.py
scripts/: generate_dataset_to_swiss_excel.py
testing/: canonicTable.py  info_all.py  list_all.py  load_all.py  load_single.py
(+2 files in other folders)
