[project]
name = "handshape-datasets"
version = "0.2.01"
description = "A single library to (down)load all existing sign language handshape datasets. This library allows you to automatically download and load various sign language handshape datasets. Currently supporting 13 different datasets."
# license = {text = "GNU Affero General Public License v3"}
readme = "README.md"
authors = [ 
        {name="Facundo Manuel Quiroga",email="f{quiroga}@lidi.info.unlp.edu.ar"}
     ]
requires-python = ">=3.10"
dependencies = [
    "gdown>=5.2.0",
    "hurry>=1.1",
    "numpy>=2.2.0",
    "opencv-python>=4.10.0.84",
    "patool>=3.1.0",
    "prettytable>=3.12.0",
    "py7zr>=0.22.0",
    "pyunpack>=0.3",
    "requests>=2.32.3",
    "scikit-image>=0.25.0",
    "scipy>=1.14.1",
    "xlsxwriter>=3.2.0",
]
classifiers = [
  "Topic :: Database",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[tool.setuptools]
license-files = []
packages = ["handshape_datasets"]

[project.urls]
Homepage = "https://github.com/midusi/handshape_datasets"
Documentation = "https://github.com/midusi/handshape_datasets"
Repository = "https://github.com/midusi/handshape_datasets.git"
Issues = "https://github.com/midusi/handshape_datasets/issues"
Changelog = "https://github.com/midusi/handshape_datasets"